2009-08-21	Roxana Leontie <roxana.leontie@gmail.com>

	* bsp_howto/framebuffer.t: Updated the frame buffer documentation.

2009-08-05	Joel Sherrill <joel.sherrill@OARcorp.com>

	* user/conf.t: Add configuration of posix message queue file
	descriptors as separate entity. Also add documentation on posix
	configuration elements not previously covered.

2009-08-03	Roxana Leontie <roxana.leontie@gmail.com>

	* bsp_howto/framebuffer.t: added documentation

2009-07-28	Joel Sherrill <joel.sherrill@oarcorp.com>

	* bsp_howto/.cvsignore, bsp_howto/Makefile.am,
	bsp_howto/bsp_howto.texi: Add Frame Buffer Device Driver shell.
	* bsp_howto/framebuffer.t: New file.
	* user/conf.t: Add CONFIGURE_APPLICATION_NEEDS_FRAME_BUFFER_DRIVER.

2009-07-02	Joel Sherrill <joel.sherrill@OARcorp.com>

	* user/region.t: Fix typos where semaphore referenced instead of region
	or segment.

2009-07-02	Joel Sherrill <joel.sherrill@OARcorp.com>

	* user/preface.texi: Correct list of supported CPU architectures.

2009-05-08	Joel Sherrill <joel.sherrill@oarcorp.com>

	* user/conf.t: Change work_space_size to uintptr_t since it cannot be
	negative.

2009-04-19	Joel Sherrill <joel.sherrill@oarcorp.com>

	* cpu_supplement/.cvsignore, cpu_supplement/Makefile.am,
	cpu_supplement/cpu_supplement.texi: Add shell for Atmel AVR chapter.
	* cpu_supplement/avr.t: New file.

2009-03-30	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* shell/confinit.t: New argument sequence for rtems_shell_init().

2009-03-02	Joel Sherrill <joel.sherrill@OARcorp.com>

	* user/.cvsignore: Add Object ID PDF files.

2009-02-27	Joel Sherrill <joel.sherrill@oarcorp.com>

	* posix_users/preface.texi, shell/preface.texi: Add stock
	acknowledgement paragraphs that are required when excerpting and
	reusing text from POSIX standards per the agreement at
	* common/opengroup_manpage_acknowledgement.texi,
	common/opengroup_preface_acknowledgement.texi: New files.

2009-02-27	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1387/doc